# mars

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
demo/rp3/: Cargo.toml
demo/rp3/crates/der3/: Cargo.toml
demo/rp3/crates/der3/src/: lib.rs
demo/rp3/crates/der3/src/sim/: mdl.rs
demo/rp3/crates/ders/: Cargo.toml
demo/rp3/crates/mars/: Cargo.toml
demo/rp3/crates/mars/src/opt/: grb.rs  mod.rs
demo/rp3/crates/mars_p3/: Cargo.toml
demo/rp3/crates/mars_p3/src/: lib.rs
demo/rp3/crates/mars_p3/src/sim/: mdl.rs  mod.rs
demo/rp3/derp/: Cargo.toml  fix.md  pyproject.toml
demo/rp3/derp/derp/: __init__.py
demo/rp3/derp/derp/sim/: __init__.py  util.py
demo/rp3/mars_py/: Cargo.toml  pyproject.toml
demo/rp3/mars_py/mars/: __init__.py
demo/rp3/mars_py/mars/sim/: __init__.py
demo/rspy-mixed/: Cargo.toml  README.md  pyproject.toml
demo/rspy-mixed/rspy_mixed/: __init__.py
demo/rspy-mixed/rspy_mixed/math/: util.py
demo/rspy-mixed/src/: lib.rs
mars/: Cargo.toml
mars/src/: lib.rs  main.rs
mars/src/opt/: mod.rs
mars/src/opt/gurobi/: lpsol.rs  lpsol.rust  mod.rs
mars/src/sim/: mod.rs
mars/src/sim/model/: jump_diffusion.rs  mod.rs
mars/src/sim/scentree/: red.rs  tree.rs
mars_p3/: Cargo.toml
mars_p3/src/: lib.rs
mars_p3/src/opt/: mod.rs
mars_p3/src/opt/gurobipy/: lpsol.rs
mars_p3/src/sim/: mod.rs
mars_p3/src/sim/scentree/: mod.rs  red.rs  tree.rs
mars_py/: Cargo.toml  pyproject.toml
mars_py/mars/: __init__.py
mars_py/mars/opt/: __init__.py
mars_py/mars/opt/gurobipy/: __init__.py
mars_py/mars/sim/: __init__.py
mars_py/mars/sim/scentree/: __init__.py
mars_py/src/: lib.rs
simulation/model/: jump_diffusion.rs
simulation/scentree/: red.rs
src/: lib.rs
