[workspace]
resolver = "2"
exclude = ["demo"]
members = [
    "mars",
    "mars_p3",
    "mars_py",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Sean Ma"]
description = "My Rust/Python repo"

[workspace.dependencies]
pyo3 = "0.24.2"
lazy_static = "1.4"
regex = "1"

mars = { version = "0.0.1", path = "mars", default-features = false }
mars_p3 = { version = "0.0.1", path = "mars_p3", default-features = false }
mars_py = { version = "0.0.1", path = "mars_py", default-features = false }

[profile.release]
opt-level = 3 # "s", "z", 1, 2, 3
lto = "fat"   # "fat", "thin", false
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
