[package]
name = "mars_py"
version = "0.0.1"
edition = "2024"

[lib]
name = "mars" # This is the name Python will use to import the module
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
mars = { path = "../mars_p3" } # Dependency on the 'mars_p3' crate within the workspace
