[build-system]
requires = ["maturin>=1.3.2"]
build-backend = "maturin"

# This is important for loading the namespaces in python
[lib]
name = "mars" # This is the name Python will use to import the module
crate-type = ["cdylib"]

[project]
name = "mars"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python",
]
dynamic = ["version"]

[tool.black]
skip-string-normalization = true

[tool.pylint.messages_control]
max-line-length = 88

[tool.maturin]
python-source = "./"
include = ["*"]
