[package]
name = "mars_py"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }

# [lib]
# name = "mars" # This is the name Python will use to import the module
# crate-type = ["cdylib"]

[dependencies]
mars = { workspace = true }
mars_p3 = { workspace = true }
pyo3 = { workspace = true, features = ["extension-module"] }
