[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "mars"
version = "0.1.0"
description = "Python bindings for mars crate"
requires-python = ">=3.7"

[tool.maturin]
python-source = "."
module-name = "mars"
bindings = "pyo3"
manifest-path = "../crates/mars_p3/Cargo.toml"
